Fix double scrollbar buttons

--- a/app/globals.css
+++ b/app/globals.css
@@ -31,3 +31,11 @@ body {
     text-wrap: balance;
   }
 }
+
+::-webkit-scrollbar-button:vertical:start:increment,
+::-webkit-scrollbar-button:vertical:end:decrement,
+::-webkit-scrollbar-button:horizontal:start:increment, 
+::-webkit-scrollbar-button:horizontal:end:decrement 
+{
+    display: none;
+}
